# backend/app/serializers/group_invite_resource.rb
@@ -1,0 +1,7 @@
+class GroupInviteResource < ApplicationResource
+  attributes :id, :token, :requires_approval, :max_uses, :uses_count, :expires_at, :created_at
+
+  attribute :usable do
+    object.usable?
+  end
+end
