# backend/app/serializers/invite_join_resource.rb
@@ -1,0 +1,12 @@
+class InviteJoinResource < ApplicationResource
+  attribute :status do
+    object.status
+  end
+
+  attribute :conversation do
+    view = object.conversation
+    next unless view
+
+    ConversationResource.new(view).to_h
+  end
+end
