# backend/app/serializers/join_request_list_resource.rb
@@ -1,0 +1,5 @@
+class JoinRequestListResource < ApplicationResource
+  attribute :join_requests do
+    object.join_requests.map { |row| JoinRequestResource.new(row).to_h }
+  end
+end
