# backend/app/serializers/join_request_resource.rb
@@ -1,0 +1,7 @@
+class JoinRequestResource < ApplicationResource
+  attributes :id, :status, :created_at
+
+  attribute :account do
+    AccountResource.new(object.account).to_h
+  end
+end
